frontend/src/mobileStyles.css
@media (max-width: 400px) {
  .category_card_image_front_page_boots {
    object-fit: cover;
    object-position: 5% 50%;
  }

  .category_card_image_front_page_ropes {
    object-fit: cover;
    object-position: 73% 50%;
  }

  .category_card_image_front_page_skis {
    object-fit: cover;
    object-position: 73% 50%;
  }

  .category_card_image_front_page_harnesses {
    object-fit: cover;
    object-position: 23% 50%;
  }

  .rappel_image {
    display: none;
  }

  .rock_inverted_photo {
    height: 200px;
    position: absolute;
    z-index: -1;
    width: 100%;
  }

  .register_form {
    padding-top: 150px;
  }
}

@media (max-width: 1575px) {
  .ice_cave_image {
    display: none;
    position: relative;
    bottom: -420px;
  }

  .ski_image {
    position: fixed;
    bottom: 185px;
    left: 350px;
    width: 100vw;
    scale: 4;
    z-index: -1;
    overflow: hidden;
    object-fit: cover;
  }

  #log_in_page_form_1 {
    padding-bottom: 150px;
  }

  #register_page_form {
    padding-right: 0px;
    padding-left: 0px;
    padding-bottom: 200px;
  }
}

@media (max-width: 600px) {
  #log_in_page_form_1 {
    padding-bottom: 0px;
  }

  .navbar-brand {
    margin: 0px;
  }

  .navbar-black {
    padding-right: 5px;
    padding-left: 5px;
    padding-top: 20px;
    padding-bottom: 20px;
  }

  .navbar-items-container {
    flex-direction: column;
    gap: 2rem;
    width: 100%;
    margin-right: 0px;
    margin-left: 0px;
    justify-content: center;
  }

  .nav-links-container {
    display: flex;
    gap: 2rem;
    justify-content: center;
  }

  .climate_pledge_div {
    margin-top: 30px;
    flex-direction: column;
    margin-right: 40px;
    margin-left: 40px;
    margin-bottom: 30px;
  }

  .plant_tree {
    width: 300px;
    margin-top: 100px;
    margin-right: 0px;
    margin-left: 0px;
    margin-bottom: 50px;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.7);
  }

  .counter {
    align-self: center;
    font-size: 20px;
    margin-left: 0px;
    margin-right: 0px;
  }

  .nasa_snow_cover {
    margin-top: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    z-index: 9999;
    margin-left: 0px;
    gap: 10px;
  }

  .snow_section_title {
    display: flex;
    margin-top: 120px;
    align-self: center;
    justify-content: center;
    align-items: center;
  }

  .nasa_sat_image {
    border-radius: 50px;
    width: 300px;
    margin-top: 0px;
    margin-right: 0px;
    margin-bottom: 40px;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.7);
  }

  .land_sat {
    width: 100px;
    margin-bottom: 40px;
    margin-left: 0px;
    margin-top: 0px;
  }

  .nasa_logo {
    width: 100px;
    margin-bottom: 20px;
  }

  .sat_images {
    margin-right: 0px;
  }

  .sat_text {
    margin-right: 150px;
    margin-left: 150px;
    width: 100%;
  }

  .date_and_text_nasa {
    width: 100%;
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-right: 15%;
    margin-left: 10%;
  }

  h1.counter {
    padding-right: 0px;
  }

  .register-container {
    align-self: center;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: 1.5rem;
    background: rgba(0, 0, 0, 0.5);
    box-shadow:
      0 4px 6px rgba(0, 0, 0, 0.3),
      0 1px 3px rgba(0, 0, 0, 0.08);
    margin: auto;
    margin-top: 2rem;
  }

  .register-form {
    width: 100%;
  }

  .login-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    width: 100%;
    height: auto;
    margin-top: 2rem;
    margin-bottom: 2rem;
    padding: 1.5rem;
    background: rgba(0, 0, 0, 0.5);
    box-shadow:
      0 4px 6px rgba(0, 0, 0, 0.3),
      0 1px 3px rgba(0, 0, 0, 0.08);
  }

  .form-group {
    gap: 0.75rem;
  }

  .button-group {
    gap: 1rem;
  }

  .register-form {
    width: 100%;
  }
}

@media (min-width: 500px) {
  .change_profile_container {
    margin-left: 36%;
    margin-top: 60px;
  }

  .change_profile_main_header {
    margin-left: 30%;
    margin-top: 2%;
  }
}

